--- a/public/assets/pci/css/styles.css
+++ b/public/assets/pci/css/styles.css
@@ -202,9 +202,7 @@ body {
 /**
  * For padding Left and Right
  */
-.qti-padding-x-0 {
-padding-right: 0 !important;
-padding-left: 0 !important;}
+.qti-padding-x-0 {padding-right: 0 !important;padding-left: 0 !important;}
 .qti-padding-x-1 {padding-right: 0.25rem !important;padding-left: 0.25rem !important;}
 .qti-padding-x-2 {padding-right: 0.5rem !important;padding-left: 0.5rem !important;}
 .qti-padding-x-3 {padding-right: 1rem !important;padding-left: 1rem !important;}
@@ -214,8 +212,7 @@ padding-left: 0 !important;}
 /**
  * For padding Top and Bottom
  */
-.qti-padding-y-0 {
-padding-top: 0 !important;padding-bottom: 0 !important;}
+.qti-padding-y-0 {padding-top: 0 !important;padding-bottom: 0 !important;}
 .qti-padding-y-1 {padding-top: 0.25rem !important;padding-bottom: 0.25rem !important;}
 .qti-padding-y-2 {padding-top: 0.5rem !important;padding-bottom: 0.5rem !important;}
 .qti-padding-y-3 {padding-top: 1rem !important;padding-bottom: 1rem !important;}
